Small layout fix for more precise alignmet

--- a/style.css
+++ b/style.css
@@ -7,11 +7,15 @@ body {
     color: #fff;
 }
 
+.calc-wrap {
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%
+}
+
 .calc-body {
-    position: absolute;
-    top: 15%;
-    left: 35%;
-    min-width: 500px;
+    width: 475px;
     border: 1px #fff solid;
     border-radius: 15px;
     padding: 20px;
